@@ -1,0 +1,24 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Math-Base36/Math-Base36-0.100.0.ebuild,v 1.1 2012/08/20 13:19:13 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=BRICAS
+MODULE_VERSION=0.10
+inherit perl-module
+
+DESCRIPTION="Encoding and decoding of base36 strings"
+
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="test"
+
+DEPEND="
+	test? (
+		dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage
+	)
+"
+
+SRC_TEST="do"
