@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Math-Base36
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Math-Base36/ChangeLog,v 1.6 2012/06/24 13:00:23 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Math-Base36/ChangeLog,v 1.7 2012/08/20 13:19:13 tove Exp $
+
+*Math-Base36-0.100.0 (20 Aug 2012)
+
+  20 Aug 2012; Torsten Veller <tove@gentoo.org> +Math-Base36-0.100.0.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
